# dspam

./: .cvsignore  .git-template  .gitignore  CHANGELOG  LICENSE  Makefile.am  README  README-ensc.org  README.courier  README.cssclean  README.exim  README.osx  README.pop3filter  README.postfix  README.qmail  README.sendmail  RELEASE.NOTES  UPGRADING  autogen-glibtool.sh  autogen.sh  configure.ac
contrib/: Makefile.am  README
contrib/Lotus Notes/: libDSPAMReporting.lss
contrib/OutlookAddin/: DSpamAddin.sln
contrib/OutlookAddin/DLL/: README
contrib/OutlookAddin/Engine/: Engine.csproj  Logger.cs  Worker.cs
contrib/OutlookAddin/Engine/GUI/: MainForm.cs  TrainingForm.cs
contrib/OutlookAddin/Engine/Parser/: KonfigurationParser.cs  MailParser.cs
contrib/OutlookAddin/Engine/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx
contrib/OutlookAddin/OutlookInterface/: Connect.cs
contrib/OutlookAddin/OutlookInterface/OutlookInterfaceSetup/: OutlookInterfaceSetup.vdproj
contrib/OutlookAddin/_LANG/: Languages.en-US.resources  Languages.fr-FR.resources  Languages.pt-PT.resources  fr-FR.xml  pt-PT.xml
contrib/OutlookAddin/simpleConsole/: Program.cs  simpleConsole.csproj
contrib/OutloukAddin/Engine/: Konfiguration.cs  Language.cs  TODO.txt  en-US.xml
contrib/OutloukAddin/Engine/GUI/: AktionForm.Designer.cs  AktionForm.cs  MainForm.Designer.cs  TrainingForm.Designer.cs
contrib/OutloukAddin/Engine/Parser/: LanguageParser.cs
contrib/OutloukAddin/OutlookInterface/: OutlookInterface.csproj
contrib/OutloukAddin/_LANG/: en-US.xml
contrib/OutloukAddin/simpleConsole/Properties/: AssemblyInfo.cs
contrib/dspam_alias_retraining/: README  dspam-retrain-forward.pl
contrib/dspam_maintenance/: README  dspam_maintenance.1  dspam_maintenance.sh
contrib/lotus_notes/: README  libDSPAMReporting.lss
contrib/plugins/: dspam-thunderbird-extension.xpi
contrib/plugins/thunderbird/: Makefile  README  TODO  chrome.manifest  install.rdf  license.txt
doc/: Makefile.am  README.cssclean  appliance.txt  cssclean.txt  exim.txt  markov.txt  mysql_drv.txt  ora_drv.txt  pgsql_drv.txt  pop3filter.txt  postfix.txt  relay.txt  sendmail.txt  sqlite_drv.txt  tests.txt  win32.txt
m4/: .gitignore  Makefile.am  berkeley_db.m4  dclassify.m4  dspam_functions.m4  external_lookup.m4  libdb3_drv.m4  libdb4_drv.m4  mysql_drv.m4  ncore.m4  ora_drv.m4  pgsql_drv.m4  pthread.m4  split_configuration.m4  sqlite3_drv.m4  sqlite_drv.m4
man/: Makefile.am  dspam.1  dspam_admin.1  dspam_clean.1  dspam_corpus.1  dspam_crc.1  dspam_dump.1  dspam_logrotate.1  dspam_merge.1  dspam_stats.1  dspam_train.1  libdspam.3
src/: .cvsignore  .gitignore  Makefile.am  agent_shared.c  agent_shared.h  base64.c  base64.h  bnr.c  bnr.h  buffer.c  buffer.h  client.c  client.h  config.h  config_api.c  config_api.h  config_shared.c  config_shared.h  css_drv.c  css_drv.h  daemon.c  daemon.h  decode.c  decode.h  diction.c  diction.h  dspam.c  dspam.conf.in  dspam.h  dspamc.c  dspamc.h  error.c  error.h  example.c  external_lookup.c  external_lookup.h  hash.c  hash.h  hash_drv.c  hash_drv.h  (+43 more)
src/tests/: Makefile-files  css-optimize.c  hash-drv.c
src/tools/: .cvsignore  .gitignore  Makefile.am  dspam_2sql.c  dspam_admin.c  dspam_clean.c  dspam_corpus.in  dspam_crc.c  dspam_dump.c  dspam_genaliases.in  dspam_logrotate  dspam_merge.c  dspam_notify.in  dspam_notify.pl  dspam_stats.c  dspam_train.in
src/tools.hash_drv/: .cvsignore  .gitignore  Makefile.am  cssclean.c  csscompress.c  cssconvert.c  cssgrow.c  cssstat.c  fallocate_mac.c  fallocate_mac.h  utils.c  utils.h
src/tools.mysql_drv/: Makefile.am  README  mysql_objects-4.1.sql  mysql_objects-space.sql  mysql_objects-speed.sql  neural.sql  purge-4.1.sql  purge.sql  virtual_user_aliases.sql  virtual_users.sql
src/tools.pgsql_drv/: .gitignore  Makefile.am  README  dspam_pg2int8.c  pgsql_objects.sql  purge-pe.sql  purge.sql  virtual_users.sql
src/tools.sqlite_drv/: Makefile.am  README  purge-2.sql  purge-3.sql
webui/cgi-bin/: .gitignore  Makefile.am  admin.cgi  admingraph.cgi  configure.pl.in  dspam.cgi  graph.cgi  htmlize.pl  subadmins
webui/cgi-bin/templates/: Makefile.am  nav_admin_error.html  nav_admin_preferences.html  nav_admin_status.html  nav_admin_user.html  nav_alerts.html  nav_analysis.html  nav_error.html  nav_fragment.html  nav_history.html  nav_performance.html  nav_preferences.html  nav_quarantine.html  nav_viewmessage.html  strings.pl
webui/cgi-bin/templates/cs/: Makefile.am  nav_admin_error.html  nav_admin_preferences.html  nav_admin_status.html  nav_admin_user.html  nav_alerts.html  nav_analysis.html  nav_error.html  nav_fragment.html  nav_history.html  nav_performance.html  nav_preferences.html  nav_quarantine.html  nav_viewmessage.html  strings.pl
webui/cgi-bin/templates/de/: Makefile.am  nav_admin_error.html  nav_admin_preferences.html  nav_admin_status.html  nav_admin_user.html  nav_alerts.html  nav_analysis.html  nav_error.html  nav_fragment.html  nav_history.html  nav_performance.html  nav_preferences.html  nav_quarantine.html  nav_viewmessage.html  strings.pl
webui/cgi-bin/templates/es-es/: Makefile.am  nav_admin_error.html  nav_admin_preferences.html  nav_admin_status.html  nav_admin_user.html  nav_alerts.html  nav_analysis.html  nav_error.html  nav_fragment.html  nav_history.html  nav_performance.html  nav_preferences.html  nav_quarantine.html  nav_viewmessage.html  strings.pl
webui/cgi-bin/templates/fr/: Makefile.am  nav_admin_error.html  nav_admin_preferences.html  nav_admin_status.html  nav_admin_user.html  nav_alerts.html  nav_analysis.html  nav_error.html  nav_fragment.html  nav_history.html  nav_performance.html  nav_preferences.html  nav_quarantine.html  nav_viewmessage.html  strings.pl
webui/cgi-bin/templates/he/: Makefile.am  nav_admin_error.html  nav_admin_preferences.html  nav_admin_status.html  nav_admin_user.html  nav_alerts.html  nav_analysis.html  nav_error.html  nav_fragment.html  nav_history.html  nav_performance.html  nav_preferences.html  nav_quarantine.html  nav_viewmessage.html  strings.pl
(+70 files in other folders)
