# $Id: Makefile.am,v 1.00 2009/12/22 12:25:59 sbajic Exp $
# doc/Makefile.am
#

EXTRA_DIST = 	courier.txt	\
		cssclean.txt \
		exim.txt	\
		mysql_drv.txt	\
		osx.txt		\
		pgsql_drv.txt	\
		pop3filter.txt	\
		postfix.txt	\
		qmail.txt	\
		sendmail.txt	\
		sqlite_drv.txt	\
		relay.txt   	\
		markov.txt	\
		tests.txt
