# $Id: Makefile.am,v 1.02 2010/07/16 21:57:19 sbajic Exp $
# m4/Makefile.am
#

EXTRA_DIST = 					\
	gcc_build_options.m4			\
	mysql_drv.m4				\
	netlibs.m4				\
	pgsql_drv.m4				\
	sqlite_drv.m4				\
	dllibs.m4				\
	external_lookup.m4			\
	pthread.m4				\
	split_configuration.m4			\
	dspam_functions.m4
